Codigo taller 2 terminados sin variable explicativa

--- a/Taller 2/Taller2.Rmd
+++ b/Taller 2/Taller2.Rmd
@@ -7,6 +7,7 @@ library(survival)
 library(muhaz)
 ```
 
+#### Se cargan los datos
 
 ```{r}
 prostatic <- read.csv("prostatic.csv", header = T, sep=",")
@@ -14,11 +15,17 @@ attach(prostatic);
 head(prostatic)
 ```
 
+#### Estadisticas descriptivas Tiempos de sobrevivencia
+
 ```{r}
 par(mfrow=c(1,2))
-hist(time)
-boxplot(time)
+hist(time, main = "Frecuencia Tiempos sobrevivencia", ylab="Frecuencia", xlab="Tiempos", cex.main=0.8)
+boxplot(time, xlab="Tiempos")
 ```
+
+#### Creación de subsets.
+
+Los datos se separan en dataset mas pequeños para facilitar su análisis
 
 ```{r}
 
@@ -28,24 +35,45 @@ treatment2 <- subset(prostatic, treatment == 2)
 
 ```
 
-
+#### Estadisticas descriptivas Tiempos de sobrevivencia por tratamiento
 
 ```{r}
 par(mfrow=c(2,2))
 
-hist(treatment1$time)
-boxplot(treatment1$time)
+hist(treatment1$time,main = "Frecuencia Tiempos sobrevivencia tratamiento 1", ylab="Frecuencia", xlab="Tiempos", cex.main=0.8)
+boxplot(treatment1$time,xlab="Tiempos")
 
 
-hist(treatment2$time)
-boxplot(treatment2$time)
+hist(treatment2$time,main = "Frecuencia Tiempos sobrevivencia tratamiento 2", ylab="Frecuencia", xlab="Tiempos", cex.main=0.8)
+boxplot(treatment2$time,xlab="Tiempos")
+
+```
+```{r}
+
+treatment1 <- subset(treatment1, treatment1$time >20)
+
+treatment2 <- subset(treatment2, treatment2$time >20)
 
 ```
 
 ```{r}
-un1 <- sort(unique(treatment1$time))
-un2 <- sort(unique(treatment2$time))
+par(mfrow=c(2,2))
 
+hist(treatment1$time,main = "Frecuencia Tiempos sobrevivencia tratamiento 1", ylab="Frecuencia", xlab="Tiempos", cex.main=0.8)
+boxplot(treatment1$time,xlab="Tiempos")
+
+
+hist(treatment2$time,main = "Frecuencia Tiempos sobrevivencia tratamiento 2", ylab="Frecuencia", xlab="Tiempos", cex.main=0.8)
+boxplot(treatment2$time,xlab="Tiempos")
+
+```
+#### Calculos de Esperanza de vida para tramiento 1
+
+```{r}
+### Se separan los valores unicos para el tratamiento 1
+
+un1 <- sort(unique(treatment1$time))
+cen1 <- c(0,0,1,1,1,0,0,0,0,0,0,0,0,0,1)
 len <- length(un1)
 
 
@@ -58,12 +86,23 @@ for ( i in 1:len){
 }
 
 
-St1 <- St1/len
+St1 <- St1/length(treatment1$time)
 
 
+
+
+
+
+```
+
+#### Calculos de Esperanza de vida para tramiento 2
+
+```{r}
+### Se separan los valores unicos para el tratamiento 2
+
+un2 <- sort(unique(treatment2$time))
+cen2 <- c(0,0,1,0,0,0,0,0,0,0,0,0,0,0,0)
 len <- length(un2)
-
-
 St2 <- c()
 
 for ( i in 1:len){
@@ -72,28 +111,40 @@ for ( i in 1:len){
   
 }
 
-
-St2 <- St2/len
+St2 <- St2/length(treatment2$time)
 ```
+
+### Función de sobrevivencia empririca
+
+```{r}
+cbind(St1,St2)
+```
+
 
 ```{r}
 par(mfrow=c(1,2))
 
-plot(un1,St1)
-plot(un2,St2)
+plot(un1,St1, main="S(t) empirica Tratamiento 1", xlab = "Tiempo", ylab="S(t)", col="red")
+plot(un2,St2, main="S(t) empirica Tratamiento 2", xlab = "Tiempo", ylab="S(t)", col="blue")
 ```
+### MVR funcion de vida media residual a la edad t0
+
+
 
 
 ```{r}
 
 rt0_1 <- sum(St1[-1])/St1[1]
-rt0_2 <- sum(St1[-1])/St2[1]
+rt0_2 <- sum(St2[-1])/St2[1]
 cbind(rt0_1, rt0_2)
 
 
 ```
+### Esperanza de vida residual en t
 
 ```{r}
+
+### Esperanza de vida residual en t, tratamiento 1
 rt1 <- c()
 
 
@@ -102,7 +153,11 @@ for ( i in 1:len){
   rt1[i] <- sum(St1[-1:-i])/St1[i]
   
 }
+```
 
+```{r}
+
+### Esperanza de vida residual en t, tratamiento 2
 rt2 <- c()
 
 
@@ -115,24 +170,24 @@ for ( i in 1:len){
 
 cbind(rt1,rt2)
 ```
-
+### Estimador de h(t) via suavizador de nuucleo
 
 ```{r}
 riesgo.can <- muhaz(time,status, max.time = 70)
-plot(riesgo.can)
+plot(riesgo.can, main = "Estimador h(t)", xlab="Tiempo seguimiento", ylab="h(t): Tasa de riesgo")
 ```
-
+### Estimador K-M tratmientos
 
 ```{r}
 # Estimador K-M Grupos
 
 ekm <- survfit(Surv(time,status)~treatment)
 summary(ekm)
-plot(ekm,lty=c(2,1),xlab="Tiempo (semanas)", ylab= "S(t) estimada")
-legend(1,0.3,lty=c(2,1), c("treament1", "treament2"), lwd=1, bty="n")
+plot(ekm, conf.int=F,col=c("red", "blue"), xlab = "Tiempo", ylab = "S(t)", main="S(t) vía Kaplan-Meier", mark.time = TRUE, lwd = 2, las=1)
+legend("bottomleft", legend=c("Tratamiento 1","Tratamiento 2"), lty = 1, lwd = 2, col=c("red", "blue"), bty="n")
 
 ```
-
+### Summary Estimador K-M Grupos
 ```{r}
 
 ekm1 <- survfit(Surv(treatment1$time,treatment1$status)~1)
@@ -140,24 +195,30 @@ summary(ekm1)
 ekm2 <- survfit(Surv(treatment2$time,treatment2$status)~1)
 summary(ekm2)
 ```
-
+### Estimador K-M por tratmientos
 
 ```{r}
 par(mfrow=c(1,2))
-plot(ekm1)
-plot(ekm2)
+plot(ekm1, main= "EKM Tratamiento 1", ylab="S(t)", xlab="Tiempo", col="red")
+plot(ekm2, main= "EKM Tratamiento 2", ylab="S(t)", xlab="Tiempo", col="blue")
+```
+### Estimador Nelson-Alen  tratmientos
+
+```{r}
+
+ena <- survfit(Surv(time,status)~treatment, type = "fh")
+summary(ena)
 ```
 
 
 ```{r}
-ena <- survfit(Surv(time,status)~treatment, type = "fh")
-summary(ena)
+# Estimador NA  Grupos
 
-plot(ena,lty=c(2,1),xlab="Tiempo (semanas)", ylab= "S(t) estimada")
-legend(1,0.3,lty=c(2,1), c("treament1", "treament2"), lwd=1, bty="n")
+plot(ena, conf.int=F,col=c("red", "blue"), xlab = "Tiempo", ylab = "S(t)", main="S(t) via Nelson-Alen", mark.time = TRUE, lwd = 2, las=1)
+legend("bottomleft", legend=c("Tratamiento 1","Tratamiento 2"), lty = 1, lwd = 2, col=c("red", "blue"), bty="n")
 
 ```
-
+# Estimador Nelson-Alen por tratamientos  
 
 ```{r}
 # Estimador NA Grupo de Control, Fleming and Harrington = fh
@@ -177,154 +238,175 @@ summary(ena2)
 ```{r}
 
 par(mfrow=c(1,2))
-plot(ena1,xlab="Tiempo (semanas)", ylab= "S(t) estimada")
-plot(ena2,xlab="Tiempo (semanas)", ylab= "S(t) estimada")
+plot(ena1, main= "ENA Tratamiento 1", ylab="S(t)", xlab="Tiempo", col="red")
+plot(ena2, main= "ENA Tratamiento 2", ylab="S(t)", xlab="Tiempo", col="blue")
+```
+### Ajuste a modelos probabilistcos
+
+```{r}
+
+logtime1 <- log(un1)[-15]
+wei1 <- log(-log(St1))[-15]
+expo1 <-  -log(St1)[-15]
+logn1 <- qnorm(St1)[-15]
+
+fitWei1 <- lm(wei1~logtime1)
+fitexpo1 <- lm(expo1~logtime1)
+fitlogn1 <- lm(logn1~logtime1)
+
 ```
 
 
 ```{r}
-index <- order(treatment1$time)
-treatment1 <- treatment1[index,]
 
-index <- order(treatment2$time)
-treatment2 <- treatment2[index,]
+logtime2 <- log(un2)[-15]
+wei2 <- log(-log(St2))[-15]
+expo2 <-  -log(St2)[-15]
+logn2 <- qnorm(St2)[-15]
+
+fitWei2 <- lm(wei2~logtime2)
+fitexpo2 <- lm(expo2~logtime2)
+fitlogn2 <- lm(logn2~logtime2)
+
 ```
 
-```{r}
-len <- length(treatment1$time)
-i <- seq(1:len)
-p_score1 <- 1- ((i-0.5)/len)
-```
-
-```{r}
-len <- length(treatment2$time)
-i <- seq(1:len)
-p_score2 <- 1- ((i-0.5)/len)
-```
-
-
-
-```{r}
-plot(treatment1$time, p_score1, col = "red", ylab= "Plotting position S(t)", xlab="Time",)
-points(treatment2$time, p_score2, col = "blue")
-legend("bottomleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue"), pch = 19, bty = "n")
-```
 
 
 ```{r}
 
 par(mfrow=c(1,3))
 
-plot(log(treatment1$time), log(-1*log(p_score1)), col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" Weibull")
+plot(logtime1, wei1, col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" Weibull")
+abline(fitWei1,col="red")
+points(logtime2, wei2, col = "blue")
+abline(fitWei2,col="blue")
+legend("topleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue"), pch = 19, bty = "n")
 
-points(log(treatment2$time), log(-1*log(p_score2)), col = "blue")
 
+plot(logtime1, expo1, col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" Exponential")
+abline(fitexpo1,col="red")
+points(logtime2, expo2, col = "blue")
+abline(fitexpo2,col="blue")
+legend("topleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue"), pch = 19, bty = "n")
+
+
+plot(logtime1, logn1, col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" Lognormal")
+abline(fitlogn1,col="red")
+points(logtime2, logn2, col = "blue")
+abline(fitlogn2,col="blue")
 legend("bottomleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue"), pch = 19, bty = "n")
-
-
-plot(log(treatment1$time), -1*log(p_score1), col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" exponential")
-
-points(log(treatment2$time), -1*log(p_score2), col = "blue")
-
-legend("bottomleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue"), pch = 19, bty = "n")
-
-
-plot(log(treatment1$time), qnorm(p_score1), col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" Lognormal")
-
-points(log(treatment2$time), qnorm(p_score2), col = "blue")
-
-legend("bottomleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue"), pch = 19, bty = "n")
-```
-
-
-```{r}
-
-logT1 <- log(ekm1$time)
-logT2 <- log(ekm2$time)
-
-logLogSurv1 <- log(-log(ekm1$surv))
-logSurv1 <- -log(ekm1$surv)
-qnormSurv1 <- qnorm(ekm1$surv)
-
-
-logLogSurv2 <- log(-log(ekm2$surv))
-logSurv2 <- -log(ekm2$surv)
-qnormSurv2 <- qnorm(ekm2$surv)
-
 ```
 
 ```{r}
 
+prostatic2 <- subset(prostatic,prostatic$time >20)
+prostatic2$treatment <- as.factor(prostatic2$treatment)
 
-plot(log(ekm1$time), log(-1*log(ekm1$surv)), col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" Weibull",ylim= c(-5,5))
+reg_exp<-survreg(Surv(time, status)~ treatment,dist='exponential', data = prostatic2)
+reg_exp
 
-points(log(treatment1$time), log(-1*log(p_score1)), col = "blue")
+reg_weibull<-survreg(Surv(time, status)~ treatment,dist='weibull', data = prostatic2)
+reg_weibull
 
-legend("bottomleft", legend=c("ekm", "empirical"), col = c("red","blue"), pch = 19, bty = "n")
+alpha<-1/reg_weibull$scale
+alpha
+
+reg_lognormal<-survreg(Surv(time, status)~treatment,dist='lognormal', data = prostatic2)
+reg_lognormal
 
 ```
 
-```{r}
-logrank <- survdiff(Surv(time,status)~ treatment)
-logrank
-```
 
 ### cox
 
 ```{r}
-cox <- coxph(Surv(time,status) ~ tomour)
-summary(cox)
-```
-```{r}
-cox1 <- coxph(Surv(time,status) ~ tomour + haem)
-summary(cox1)
-```
-```{r}
-cox2 <- coxph(Surv(time,status) ~ tomour + haem +gleason)
-summary(cox2)
-```
 
-
-```{r}
-cox3 <- coxph(Surv(time,status) ~ tomour + haem + gleason +age)
-summary(cox3)
-```
-```{r}
-anova(cox, cox1, cox2, cox3, test = "LRT")
-```
-
-```{r}
-cox4 <- coxph(Surv(time,status) ~ treatment + age)
-summary(cox4)
-```
-
-
-```{r}
-
-plot(predict(cox4), residuals(cox4),
-     xlab= "Fitted values", ylab ="Martingale residuals",
-     main="residual Plot", las = 1)
-### add a line ax y = residual = 0
-
-# fir a smoother thru the points
-
-lines(smooth.spline(predict(cox4), residuals(cox4)), col = "red")
-```
-```{r}
-
-k <- residuals(cox4,type="martingale")
-
-
-cox.zph(cox3,transform="rank")
+require(MASS)
+cox_lar1<-coxph(Surv(time,status) ~ 1 ,data=prostatic,x=T,method="breslow")
+summary(cox_lar1)
+cox_lar1$loglik
 
 ```
 
 ```{r}
-plot(cox.zph(cox4,transform="identity"))
+cox_lar2<-coxph(Surv(time,status) ~ tomour ,data=prostatic,x=T,method="breslow")
+summary(cox_lar2)
+cox_lar2$loglik
+```
+```{r}
+cox_lar3<-coxph(Surv(time,status) ~ tomour + gleason,data=prostatic,x=T,method="breslow")
+summary(cox_lar3)
+cox_lar3$loglik
 ```
 
 ```{r}
-
-plot(k~age)
+cox_lar4<-coxph(Surv(time,status) ~ tomour + gleason + age,data=prostatic,x=T,method="breslow")
+summary(cox_lar4)
+cox_lar4$loglik
 ```
+
+```{r}
+cox_lar5<-coxph(Surv(time,status) ~ tomour + gleason + age + haem,data=prostatic,x=T,method="breslow")
+summary(cox_lar5)
+cox_lar5$loglik
+```
+```{r}
+anova(cox_lar1,cox_lar2,cox_lar3,cox_lar4,cox_lar5)
+```
+```{r}
+Reg_paso<-stepAIC(cox_lar5)
+```
+
+
+```{r}
+
+residuals(cox_lar3,type="scaledsch")
+cox.zph(cox_lar3,transform="identity") ## g(t)=t
+par(mfrow=c(2,4))
+plot(cox.zph(cox_lar3))
+
+```
+
+## Captura de los resiguales de martingale
+
+```{r}
+martinagale<- residuals(cox_lar3, type = "martingale")
+```
+
+### Calculo de los residuos CoxSnell
+
+
+```{r}
+coxsnell <- -(martinagale - prostatic$status)
+```
+
+A continuación, el residuo de Cox-Snell para ajustar un modelo nulo de Cox y obtener el estimador de riesgo acumulativo de Nelson-Aalen.
+
+```{r}
+fit_coxsnell <- coxph(formula = Surv(coxsnell, prostatic$status) ~ 1,
+                      ties    = c("efron","breslow","exact")[1])
+
+base_haz <- basehaz(fit_coxsnell, centered = FALSE)
+
+head(base_haz)
+```
+
+Para visualizar los residuales CoxSnell tenemos que:
+
+```{r}
+
+plot(base_haz$time,base_haz$hazard,ylim=c(0,2.5), xlim=c(0,2),ylab="Harzard acumulado", xlab="Residuos CoxSnell", col="blue", main="Residuos Cox-Snell")
+abline(lm(base_haz$hazard~base_haz$time), col ="red")
+
+```
+
+```{r}
+H<-basehaz(cox_lar3,centered=F)
+tpos<-H$time
+H0<-H$hazard
+S0<-exp(-H0)
+round(cbind(tpos,S0,H0),digits=5)
+```
+
+
 
